created FBA model and update CaCO3 SBML model

--- a/concerto/notebooks/consumer_resource_modeling/calcium_carbonate_modeling.ipynb
+++ b/concerto/notebooks/consumer_resource_modeling/calcium_carbonate_modeling.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,14 +61,14 @@
     "\n",
     "  const water;\n",
     "\n",
-    "  // Reaction 1: Ureolysis\n",
+    "  // Reaction 1: Ureolysis (irreversible)\n",
     "  reaction_ureolysis: urea + $water => 2 ammonia + carbon_dioxide; (V_max_urease*urea)/(K_m_urease + urea);  // Michaelis-Menton (water in excess and fixed);\n",
     "\n",
     "  // Reaction 2: Protonation of Ammonia\n",
     "  reaction_protonation_NH3: 2 ammonia + 2 water -> 2 ammonium + 2 hydroxide; k2f * ammonia^2 * water^2 - k2r * ammonium^2 * hydroxide^2;\n",
     "\n",
-    "  // Reaction 3: CO2 Hydrolysis\n",
-    "  reaction_CO2_hydrolysis: carbon_dioxide + water -> carbonic_acid; (K_cat_CA*CA_conc*carbon_dioxide)/(K_m_CA + carbon_dioxide);   // Michaelis-Menton;\n",
+    "  // Reaction 3: CO2 Hydrolysis (irreversible)\n",
+    "  reaction_CO2_hydrolysis: carbon_dioxide + water => carbonic_acid; (K_cat_CA*CA_conc*carbon_dioxide)/(K_m_CA + carbon_dioxide);   // Michaelis-Menton;\n",
     "\n",
     "  // Reaction 4: Dissociation of Carbonic Acid\n",
     "  reaction_dissociation_H2CO3: carbonic_acid + hydroxide -> bicarbonate + water; k4f * carbonic_acid * hydroxide - k4r * bicarbonate * water;\n",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,17 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "corrected_sbml_file = 'microbial_induced_calcium_carbonate_precipitation_model_corrected.xml'\n",
-    "#community_modeling.update_SBML_for_MIRA(original_sbml_file=sbml_file, updated_sbml_file=corrected_sbml_file)"
+    "community_modeling.update_SBML_for_MIRA(original_sbml_file=sbml_file, updated_sbml_file=corrected_sbml_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
     {
      "data": {
       "text/plain": [
-       "{'water': Initial(concept=Concept(name='water', display_name='water', description=None, identifiers={}, context={}, units=None), expression=55.0),\n",
+       "{'water': Initial(concept=Concept(name='water', display_name='water', description=None, identifiers={}, context={}, units=None), expression=nan),\n",
        " 'urea': Initial(concept=Concept(name='urea', display_name='urea', description=None, identifiers={}, context={}, units=None), expression=0.33),\n",
        " 'ammonia': Initial(concept=Concept(name='ammonia', display_name='ammonia', description=None, identifiers={}, context={}, units=None), expression=1.0e-5),\n",
        " 'carbon_dioxide': Initial(concept=Concept(name='carbon_dioxide', display_name='carbon_dioxide', description=None, identifiers={}, context={}, units=None), expression=1.0e-5),\n",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,12 +500,12 @@
    "source": [
     "## FBA\n",
     "\n",
-    "need to set bounds on FBA model"
+    "getting 0 CaCO3 yield?!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -529,57 +529,118 @@
       "ERROR:cobra.io.sbml:No objective coefficients in model. Unclear what should be optimized\n",
       "WARNING:cobra.io.sbml:Missing flux bounds on reactions set to default bounds.As best practise and to avoid confusion flux bounds should be set explicitly on all reactions.\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Objective value (CaCO3 yield): 0.0\n",
-      "\n",
-      "Flux distribution:\n",
-      "EX_water: 0.0\n",
-      "reaction_ureolysis: 0.0\n",
-      "reaction_protonation_NH3: 0.0\n",
-      "reaction_CO2_hydrolysis: 0.0\n",
-      "reaction_dissociation_H2CO3: 0.0\n",
-      "reaction_dissociation_HCO3: 0.0\n",
-      "reaction_CaCO3_precipitation: 0.0\n"
-     ]
     }
    ],
    "source": [
     "import cobra\n",
-    "def optimize_calcium_carbonate_yield(sbml_file):\n",
+    "\n",
+    "\n",
+    "\n",
+    "def save_sbml_to_cobra(sbml_file, cobra_filename):\n",
+    "    \n",
     "    # Load the SBML model\n",
     "    model = cobra.io.read_sbml_model(sbml_file)\n",
     "    \n",
+    "    # Set metabolite compartment and name\n",
+    "    for metabolite in model.metabolites:\n",
+    "        metabolite.id = metabolite.name + \"_e\"\n",
+    "        metabolite.compartment = 'e'\n",
+    "\n",
+    "    # Set boundary reactions\n",
+    "    model.add_boundary(model.metabolites.get_by_id('urea_e'), type='exchange')\n",
+    "    model.add_boundary(model.metabolites.get_by_id('ammonium_e'), type='exchange')\n",
+    "    model.add_boundary(model.metabolites.get_by_id('calcium_ion_e'), type='exchange')\n",
+    "    model.add_boundary(model.metabolites.get_by_id('calcium_carbonate_e'), type='exchange')\n",
+    "\n",
     "    # Set default bounds for all reactions\n",
     "    for reaction in model.reactions:\n",
     "        reaction.lower_bound = -1000\n",
     "        reaction.upper_bound = 1000\n",
-    "    \n",
+    "\n",
     "    # Adjust bounds for specific reactions if needed\n",
     "    model.reactions.get_by_id('reaction_ureolysis').lower_bound = 0   # Ureolysis is irreversible\n",
-    "    model.reactions.get_by_id('reaction_ureolysis').upper_bound = 1000  # Allow a large flux\n",
+    "    model.reactions.get_by_id('reaction_CO2_hydrolysis').lower_bound = 0   # CO2_hydrolysis is irreversible\n",
+    "    \n",
+    "    # Adjust bounds for boundary reactions\n",
+    "    model.reactions.get_by_id('EX_urea_e').lower_bound = -10\n",
+    "    model.reactions.get_by_id('EX_calcium_ion_e').lower_bound = -10\n",
+    "    model.reactions.get_by_id('EX_ammonium_e').upper_bound = 10\n",
+    "    model.reactions.get_by_id('EX_calcium_carbonate_e').upper_bound = 10\n",
     "\n",
     "    # Set the objective to maximize CaCO3 production\n",
     "    model.objective = 'reaction_CaCO3_precipitation'\n",
     "    model.reactions.get_by_id('reaction_CaCO3_precipitation').objective_coefficient = 1\n",
     "    \n",
-    "    # Perform FBA\n",
-    "    solution = model.optimize()\n",
-    "    \n",
-    "    # Print the objective value (max yield of CaCO3)\n",
-    "    print(\"Objective value (CaCO3 yield):\", solution.objective_value)\n",
-    "    \n",
-    "    # Print the flux distribution\n",
-    "    print(\"\\nFlux distribution:\")\n",
-    "    for reaction in model.reactions:\n",
-    "        print(f\"{reaction.id}: {solution.fluxes[reaction.id]}\")\n",
-    "    \n",
-    "    return solution\n",
-    "# Optimize for CaCO3 yield\n",
-    "solution = optimize_calcium_carbonate_yield(corrected_sbml_file)"
+    "    cobra.io.write_sbml_model(model, filename=cobra_filename)\n",
+    "\n",
+    "\n",
+    "cobra_filename = 'microbial_induced_calcium_carbonate_precipitation_model_corrected_fba.xml'\n",
+    "save_sbml_to_cobra(corrected_sbml_file,cobra_filename)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Objective value (CaCO3 yield): 5.0\n",
+      "\n",
+      "Flux distribution:\n",
+      "EX_water: -10.0\n",
+      "reaction_ureolysis: 5.0\n",
+      "reaction_protonation_NH3: 5.0\n",
+      "reaction_CO2_hydrolysis: 5.0\n",
+      "reaction_dissociation_H2CO3: 5.0\n",
+      "reaction_dissociation_HCO3: 5.0\n",
+      "reaction_CaCO3_precipitation: 5.0\n",
+      "EX_urea_e: -5.0\n",
+      "EX_ammonium_e: 10.0\n",
+      "EX_calcium_ion_e: -5.0\n",
+      "EX_calcium_carbonate_e: 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = cobra.io.read_sbml_model(cobra_filename)\n",
+    "\n",
+    "# Perform FBA\n",
+    "solution = model.optimize()\n",
+    "\n",
+    "# Print the objective value (max yield of CaCO3)\n",
+    "print(\"Objective value (CaCO3 yield):\", solution.objective_value)\n",
+    "\n",
+    "# Print the flux distribution\n",
+    "print(\"\\nFlux distribution:\")\n",
+    "for reaction in model.reactions:\n",
+    "    print(f\"{reaction.id}: {solution.fluxes[reaction.id]}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1 Mole of CaCO3 : 1 Mole of urea, calcuium ion, and calcium carbonate\n",
+    "\n",
+    "1 Mole of CaCO3 : 2 Moles of ammonium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# next steps:\n",
+    "# create a combined model smetana + caco3\n",
+    "# combine CaCO3 and consumer resource FBA / genome scale model"
    ]
   },
   {
