--- a/concerto/notebooks/consumer_resource_modeling/convert_smetana_to_consumer_resource_model.ipynb
+++ b/concerto/notebooks/consumer_resource_modeling/convert_smetana_to_consumer_resource_model.ipynb
@@ -1657,9 +1657,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<!-- # model for calcium carbonate ($\\mathrm{CaCO_3}$) precipitation\n",
+    "# model for calcium carbonate ($\\mathrm{CaCO_3}$) precipitation\n",
     "\n",
-    "see: https://www.frontiersin.org/journals/materials/articles/10.3389/fmats.2019.00126/full (eqns 1-7 and figure 4)\n",
+    "...\n",
+    "<!-- see: https://www.frontiersin.org/journals/materials/articles/10.3389/fmats.2019.00126/full (eqns 1-7 and figure 4)\n",
     "\n",
     "$$\\begin{array}{rcl}\n",
     " \\text{CO(NH}_2\\text{)}_2 + \\text{H}_2 &\\rightarrow& \\text{NH}_2\\text{COOH} + \\text{NH}_3  \\\\\n",
@@ -1671,7 +1672,7 @@
     " \\text{Cell}-\\text{Ca}^{2+} + \\text{CO}_3^{2-} &\\rightarrow& \\text{Cell}-\\text{CaCO}_3 \n",
     "\\end{array}$$\n",
     " \n",
-    " note: pH + pOH = 14, so we should enforce that constraint on the model -->"
+    " note: pH + pOH = 14, so we should enforce that constraint on the model  -->"
    ]
   },
   {
