annotation and filepath renaming of victor's files

--- a/concerto/notebooks/vtcode/confirm_growth_add_carbon_sources_to_the_minimum_media.ipynb
+++ b/concerto/notebooks/vtcode/confirm_growth_add_carbon_sources_to_the_minimum_media.ipynb
@@ -68,9 +68,13 @@
     "    element: The element you want to exclude from the csv file.\n",
     "    model_name: A string whos only purpose is to help rename the new generated csv file.'''\n",
     "\n",
-    "    min_medium_model = cobra.medium.minimal_medium(model) #Extracting the minimal media from the file.\n",
-    "    matches = re.findall(r\"(EX_.+_e)\\s\", str(min_medium_model)) #Extracting the exchange reactions of the minimal media.\n",
-    "    # We create a variable that will store the exchange reactions of the minimal media. Here I have added other reactions that do not contain carbon that may benefit growth.\n",
+    "    min_medium_model = cobra.medium.minimal_medium(model) #Extracting the minimal media from the file; \n",
+    "    #is computationally removing carbon sources from rich media. \n",
+    "    #Happens in a list format --> goes into Memote\n",
+    "    matches = re.findall(r\"(EX_.+_e)\\s\", str(min_medium_model)) #Extracting the exchange reactions of the \n",
+    "    #minimal media.\n",
+    "    # We create a variable that will store the exchange reactions of the minimal media. \n",
+    "    #Here I have added other reactions that do not contain carbon that may benefit growth.\n",
     "    Info = \"exchange,uptake\\nEX_h2o_e,1000\\nEX_h_e,1000\\nEX_na1_e,1000\\nEX_nh4_e,1000\\nEX_ni2_e,1000\\nEX_pi_e,1000\\n\"\n",
     "    # We iterate through each exchange reaction.\n",
     "    for medium in matches:\n",
@@ -100,9 +104,9 @@
     "                #If the conditions are met, then we add it to the Info variable.\n",
     "                Info = Info + medium + \",\" + \"1000\\n\"\n",
     "    # We create a new file and write the Info variable in it.\n",
-    "    newfile = open(\"minimal_media_no_carbon_csc031.csv\", \"w\")\n",
+    "    newfile = open(\"minimal_media_no_carbon_csc031.csv\", \"w\") #new output file based on minmedia computations\n",
     "    newfile.write(Info)\n",
-    "    return print(Info)"
+    "    return Info"
    ]
   },
   {
