--- a/concerto/notebooks/vtcode/generate_rich_media.ipynb
+++ b/concerto/notebooks/vtcode/generate_rich_media.ipynb
@@ -13,324 +13,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "c0374e1e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "'' is not a valid SBML 'SId'.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "exchange,uptake\n",
-      "EX_25dkglcn_e,1000\n",
-      "EX_2m35mdntha_e,1000\n",
-      "EX_34dhpac_e,1000\n",
-      "EX_35dnta_e,1000\n",
-      "EX_4abut_e,1000\n",
-      "EX_4ahmmp_e,1000\n",
-      "EX_4hbz_e,1000\n",
-      "EX_4hphac_e,1000\n",
-      "EX_4hpro_LT_e,1000\n",
-      "EX_4oxptn_e,1000\n",
-      "EX_5drib_e,1000\n",
-      "EX_LalaDgluMdap_e,1000\n",
-      "EX_LalaLglu_e,1000\n",
-      "EX_Larab_e,1000\n",
-      "EX_Lcyst_e,1000\n",
-      "EX_abg4_e,1000\n",
-      "EX_ac_e,1000\n",
-      "EX_acald_e,1000\n",
-      "EX_acgam_e,1000\n",
-      "EX_acmana_e,1000\n",
-      "EX_acnam_e,1000\n",
-      "EX_acon_C_e,1000\n",
-      "EX_adn_e,1000\n",
-      "EX_akg_e,1000\n",
-      "EX_ala_B_e,1000\n",
-      "EX_ala_L_asp__L_e,1000\n",
-      "EX_ala_L_glu__L_e,1000\n",
-      "EX_ala_L_thr__L_e,1000\n",
-      "EX_ala__D_e,1000\n",
-      "EX_ala__L_e,1000\n",
-      "EX_ala_gln_e,1000\n",
-      "EX_ala_his_e,1000\n",
-      "EX_ala_leu_e,1000\n",
-      "EX_alagly_e,1000\n",
-      "EX_alahis_e,1000\n",
-      "EX_alaleu_e,1000\n",
-      "EX_alathr_e,1000\n",
-      "EX_alatrp_e,1000\n",
-      "EX_anhgm_e,1000\n",
-      "EX_arab__L_e,1000\n",
-      "EX_arbt6p_e,1000\n",
-      "EX_arbt_e,1000\n",
-      "EX_arg__L_e,1000\n",
-      "EX_ascb__L_e,1000\n",
-      "EX_asn__L_e,1000\n",
-      "EX_asp__L_e,1000\n",
-      "EX_balaala_e,1000\n",
-      "EX_balabala_e,1000\n",
-      "EX_balagly_e,1000\n",
-      "EX_balaleu_e,1000\n",
-      "EX_balamd_e,1000\n",
-      "EX_bz_e,1000\n",
-      "EX_bzalc_e,1000\n",
-      "EX_ca2_e,1000\n",
-      "EX_carn_e,1000\n",
-      "EX_cellb_e,1000\n",
-      "EX_cgly_e,1000\n",
-      "EX_ch4s_e,1000\n",
-      "EX_chol_e,1000\n",
-      "EX_chols_e,1000\n",
-      "EX_chsterol_e,1000\n",
-      "EX_cinnm_e,1000\n",
-      "EX_cit_e,1000\n",
-      "EX_cl_e,1000\n",
-      "EX_cmcbtt_e,1000\n",
-      "EX_co2_e,1000\n",
-      "EX_cobalt2_e,1000\n",
-      "EX_crn_e,1000\n",
-      "EX_csn_e,1000\n",
-      "EX_cu2_e,1000\n",
-      "EX_cyan_e,1000\n",
-      "EX_cytd_e,1000\n",
-      "EX_dca_e,1000\n",
-      "EX_dopa_e,1000\n",
-      "EX_drib_e,1000\n",
-      "EX_duri_e,1000\n",
-      "EX_dxyl_e,1000\n",
-      "EX_enter_e,1000\n",
-      "EX_etoh_e,1000\n",
-      "EX_fe2_e,1000\n",
-      "EX_fe3_e,1000\n",
-      "EX_fe3dcit_e,1000\n",
-      "EX_fe3pyovd_kt_e,1000\n",
-      "EX_feenter_e,1000\n",
-      "EX_for_e,1000\n",
-      "EX_fru_e,1000\n",
-      "EX_fuc_e,1000\n",
-      "EX_fum_e,1000\n",
-      "EX_g3pc_e,1000\n",
-      "EX_g3pe_e,1000\n",
-      "EX_g3pg_e,1000\n",
-      "EX_gal_bD_e,1000\n",
-      "EX_galctn__D_e,1000\n",
-      "EX_galman4_e,1000\n",
-      "EX_galman6_e,1000\n",
-      "EX_galt_e,1000\n",
-      "EX_gam_e,1000\n",
-      "EX_glc__D_e,1000\n",
-      "EX_glc__aD_e,1000\n",
-      "EX_glcman4_e,1000\n",
-      "EX_glcman6_e,1000\n",
-      "EX_gln__L_e,1000\n",
-      "EX_glu__L_e,1000\n",
-      "EX_glucan4_e,1000\n",
-      "EX_glucan6_e,1000\n",
-      "EX_gly_asn__L_e,1000\n",
-      "EX_gly_asp__L_e,1000\n",
-      "EX_gly_cys_e,1000\n",
-      "EX_gly_e,1000\n",
-      "EX_gly_gln_e,1000\n",
-      "EX_gly_glu__L_e,1000\n",
-      "EX_gly_leu_e,1000\n",
-      "EX_gly_met_e,1000\n",
-      "EX_gly_phe_e,1000\n",
-      "EX_gly_pro__L_e,1000\n",
-      "EX_gly_tyr_e,1000\n",
-      "EX_glyald_e,1000\n",
-      "EX_glyb_e,1000\n",
-      "EX_glyc3p_e,1000\n",
-      "EX_glyc_e,1000\n",
-      "EX_glyclt_e,1000\n",
-      "EX_glygln_e,1000\n",
-      "EX_glyglu_e,1000\n",
-      "EX_glygly_e,1000\n",
-      "EX_glyglygln_e,1000\n",
-      "EX_glymet_e,1000\n",
-      "EX_glyphe_e,1000\n",
-      "EX_glyser_e,1000\n",
-      "EX_gthrd_e,1000\n",
-      "EX_gua_e,1000\n",
-      "EX_h2o2_e,1000\n",
-      "EX_h2o_e,1000\n",
-      "EX_h2s_e,1000\n",
-      "EX_h_e,1000\n",
-      "EX_hco3_e,1000\n",
-      "EX_hdca_e,1000\n",
-      "EX_hexs_e,1000\n",
-      "EX_hia_e,1000\n",
-      "EX_his__L_e,1000\n",
-      "EX_hisgly_e,1000\n",
-      "EX_hishis_e,1000\n",
-      "EX_hom__L_e,1000\n",
-      "EX_hpta_e,1000\n",
-      "EX_hxa_e,1000\n",
-      "EX_hxan_e,1000\n",
-      "EX_icit_e,1000\n",
-      "EX_ile__L_e,1000\n",
-      "EX_ind3ac_e,1000\n",
-      "EX_indole_e,1000\n",
-      "EX_inost_e,1000\n",
-      "EX_k_e,1000\n",
-      "EX_lac__L_e,1000\n",
-      "EX_lcts_e,1000\n",
-      "EX_leu__L_e,1000\n",
-      "EX_leuleu_e,1000\n",
-      "EX_lmn2_e,1000\n",
-      "EX_lnlc_e,1000\n",
-      "EX_lys__L_e,1000\n",
-      "EX_lysglugly_e,1000\n",
-      "EX_mal__L_e,1000\n",
-      "EX_malt_e,1000\n",
-      "EX_malthp_e,1000\n",
-      "EX_malthx_e,1000\n",
-      "EX_malttr_e,1000\n",
-      "EX_maltttr_e,1000\n",
-      "EX_man_e,1000\n",
-      "EX_manb_e,1000\n",
-      "EX_mantr_e,1000\n",
-      "EX_manttr_e,1000\n",
-      "EX_meoh_e,1000\n",
-      "EX_met_L_ala__L_e,1000\n",
-      "EX_met__L_e,1000\n",
-      "EX_metox__R_e,1000\n",
-      "EX_metox_e,1000\n",
-      "EX_metsox_R__L_e,1000\n",
-      "EX_metsox_S__L_e,1000\n",
-      "EX_mg2_e,1000\n",
-      "EX_mn2_e,1000\n",
-      "EX_mnl_e,1000\n",
-      "EX_mso3_e,1000\n",
-      "EX_nac_e,1000\n",
-      "EX_nh4_e,1000\n",
-      "EX_nmn_e,1000\n",
-      "EX_no2_e,1000\n",
-      "EX_no3_e,1000\n",
-      "EX_no_e,1000\n",
-      "EX_nona_e,1000\n",
-      "EX_o2_e,1000\n",
-      "EX_ocdca_e,1000\n",
-      "EX_octa_e,1000\n",
-      "EX_orn_e,1000\n",
-      "EX_pdima_e,1000\n",
-      "EX_peamn_e,1000\n",
-      "EX_pentso3_e,1000\n",
-      "EX_phe__L_e,1000\n",
-      "EX_phedca_e,1000\n",
-      "EX_phehpa_e,1000\n",
-      "EX_phehxa_e,1000\n",
-      "EX_pheme_e,1000\n",
-      "EX_phenona_e,1000\n",
-      "EX_pheocta_e,1000\n",
-      "EX_phept_e,1000\n",
-      "EX_pi_e,1000\n",
-      "EX_pnto__R_e,1000\n",
-      "EX_pro__L_e,1000\n",
-      "EX_progly_e,1000\n",
-      "EX_prohisglu_e,1000\n",
-      "EX_pta_e,1000\n",
-      "EX_ptrc_e,1000\n",
-      "EX_ptsla_e,1000\n",
-      "EX_pyovd_kt_e,1000\n",
-      "EX_raffin_e,1000\n",
-      "EX_rbt_e,1000\n",
-      "EX_rib__D_e,1000\n",
-      "EX_rmn_e,1000\n",
-      "EX_salc_e,1000\n",
-      "EX_salchs4_e,1000\n",
-      "EX_salchs4fe_e,1000\n",
-      "EX_sbt__D_e,1000\n",
-      "EX_sel_e,1000\n",
-      "EX_ser__D_e,1000\n",
-      "EX_ser__L_e,1000\n",
-      "EX_serglugly_e,1000\n",
-      "EX_skm_e,1000\n",
-      "EX_slnt_e,1000\n",
-      "EX_so3_e,1000\n",
-      "EX_so4_e,1000\n",
-      "EX_spmd_e,1000\n",
-      "EX_succ_e,1000\n",
-      "EX_sucr_e,1000\n",
-      "EX_taur_e,1000\n",
-      "EX_tcynt_e,1000\n",
-      "EX_thm_e,1000\n",
-      "EX_thr__L_e,1000\n",
-      "EX_tnt_e,1000\n",
-      "EX_tre_e,1000\n",
-      "EX_trp__L_e,1000\n",
-      "EX_tsul_e,1000\n",
-      "EX_ttdca_e,1000\n",
-      "EX_tyr__L_e,1000\n",
-      "EX_ump_e,1000\n",
-      "EX_ura_e,1000\n",
-      "EX_uri_e,1000\n",
-      "EX_val__L_e,1000\n",
-      "EX_vanlt_e,1000\n",
-      "EX_xyl3_e,1000\n",
-      "EX_xyl__D_e,1000\n",
-      "EX_xylan4_e,1000\n",
-      "EX_xylb_e,1000\n",
-      "EX_xylu__L_e,1000\n",
-      "EX_zn2_e,1000\n",
-      "EX_cs_c_e,1000\n",
-      "EX_dextrin_e,1000\n",
-      "EX_glycogen_e,1000\n",
-      "EX_mannan_e,1000\n",
-      "EX_pectin_e,1000\n",
-      "EX_acgal_e,1000\n",
-      "EX_arab__D_e,1000\n",
-      "EX_abt__D_e,1000\n",
-      "EX_abt__L_e,1000\n",
-      "EX_madg_e,1000\n",
-      "EX_pala_e,1000\n",
-      "EX_salcn_e,1000\n",
-      "EX_srb__L_e,1000\n",
-      "EX_stys_e,1000\n",
-      "EX_tag__D_e,1000\n",
-      "EX_xylt_e,1000\n",
-      "EX_but_e,1000\n",
-      "EX_citac_e,1000\n",
-      "EX_citm_e,1000\n",
-      "EX_itacon_e,1000\n",
-      "EX_5dglcn_e,1000\n",
-      "EX_malon_e,1000\n",
-      "EX_oxa_e,1000\n",
-      "EX_quin_e,1000\n",
-      "EX_Dara14lac_e,1000\n",
-      "EX_sebacid_e,1000\n",
-      "EX_tartr__D_e,1000\n",
-      "EX_tartr__L_e,1000\n",
-      "EX_ad_e,1000\n",
-      "EX_acglu_e,1000\n",
-      "EX_4hpro_DC_e,1000\n",
-      "EX_orn__L_e,1000\n",
-      "EX_5oxpro_e,1000\n",
-      "EX_dha_e,1000\n",
-      "EX_btd_RR_e,1000\n",
-      "EX_diact_e,1000\n",
-      "EX_R_actn_e,1000\n",
-      "EX_atp_e,1000\n",
-      "EX_ctp_e,1000\n",
-      "EX_gtp_e,1000\n",
-      "EX_utp_e,1000\n",
-      "EX_itp_e,1000\n",
-      "EX_nadh_e,1000\n",
-      "EX_fadh2_e,1000\n",
-      "EX_rbflvrd_e,1000\n",
-      "EX_mql8_e,1000\n",
-      "EX_mql6_e,1000\n",
-      "EX_mql7_e,1000\n",
-      "EX_2dmmql8_e,1000\n",
-      "EX_accoa_e,1000\n",
-      "\n"
+     "ename": "OSError",
+     "evalue": "The file with '../victor_files_n_codes/Generation_of_rich_media_csv_file/updated_modelcsc031FixedCompartments.xml' does not exist, or is not an SBML string. Provide the path to an existing SBML file or a valid SBML string representation:\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcobra\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmedium\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m minimal_medium\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m#We load the model that we want to generate a minimal media csv file.\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m model_csc031 \u001b[38;5;241m=\u001b[39m \u001b[43mread_sbml_model\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m../victor_files_n_codes/Generation_of_rich_media_csv_file/updated_modelcsc031FixedCompartments.xml\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mgetMedias\u001b[39m(model, element, model_name):\n\u001b[0;32m     12\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m'''\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;124;03m    PARAMETERS:\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;124;03m    model: The model that you want to generate the rich media csv file.\u001b[39;00m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;124;03m    element: The element you want to exclude from the csv file (not necessary for getting the rich media.)\u001b[39;00m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;124;03m    model_name: A string whos only purpose is to help rename the new generated csv file.'''\u001b[39;00m\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\cobra\\io\\sbml.py:460\u001b[0m, in \u001b[0;36mread_sbml_model\u001b[1;34m(filename, number, f_replace, **kwargs)\u001b[0m\n\u001b[0;32m    458\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _sbml_to_model(doc, number\u001b[38;5;241m=\u001b[39mnumber, f_replace\u001b[38;5;241m=\u001b[39mf_replace, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    459\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mIOError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m--> 460\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n\u001b[0;32m    462\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m original_error:\n\u001b[0;32m    463\u001b[0m     cobra_error \u001b[38;5;241m=\u001b[39m CobraSBMLError(\n\u001b[0;32m    464\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSomething went wrong reading the SBML model. Most likely the SBML\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    465\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m model is not valid. Please check that your model is valid using \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    470\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mat https://github.com/opencobra/cobrapy/issues .\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    471\u001b[0m     )\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\cobra\\io\\sbml.py:457\u001b[0m, in \u001b[0;36mread_sbml_model\u001b[1;34m(filename, number, f_replace, **kwargs)\u001b[0m\n\u001b[0;32m    402\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Read SBML model from given filename.\u001b[39;00m\n\u001b[0;32m    403\u001b[0m \n\u001b[0;32m    404\u001b[0m \u001b[38;5;124;03mIf the given filename ends with the suffix ''.gz'' (for example,\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    454\u001b[0m \u001b[38;5;124;03mFile handles to compressed files are not supported yet.\u001b[39;00m\n\u001b[0;32m    455\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    456\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 457\u001b[0m     doc \u001b[38;5;241m=\u001b[39m \u001b[43m_get_doc_from_filename\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    458\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _sbml_to_model(doc, number\u001b[38;5;241m=\u001b[39mnumber, f_replace\u001b[38;5;241m=\u001b[39mf_replace, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    459\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mIOError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\cobra\\io\\sbml.py:504\u001b[0m, in \u001b[0;36m_get_doc_from_filename\u001b[1;34m(filename)\u001b[0m\n\u001b[0;32m    501\u001b[0m         doc: libsbml\u001b[38;5;241m.\u001b[39mSBMLDocument \u001b[38;5;241m=\u001b[39m libsbml\u001b[38;5;241m.\u001b[39mreadSBMLFromFile(filename)\n\u001b[0;32m    502\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    503\u001b[0m         \u001b[38;5;66;03m# string representation\u001b[39;00m\n\u001b[1;32m--> 504\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mIOError\u001b[39;00m(\n\u001b[0;32m    505\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe file with \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfilename\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m does not exist, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    506\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mor is not an SBML string. Provide the path to \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    507\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124man existing SBML file or a valid SBML string representation:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    508\u001b[0m         )\n\u001b[0;32m    509\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(filename, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mread\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[0;32m    510\u001b[0m     \u001b[38;5;66;03m# file handle\u001b[39;00m\n\u001b[0;32m    511\u001b[0m     doc: libsbml\u001b[38;5;241m.\u001b[39mSBMLDocument \u001b[38;5;241m=\u001b[39m libsbml\u001b[38;5;241m.\u001b[39mreadSBMLFromString(filename\u001b[38;5;241m.\u001b[39mread())\n",
+      "\u001b[1;31mOSError\u001b[0m: The file with '../victor_files_n_codes/Generation_of_rich_media_csv_file/updated_modelcsc031FixedCompartments.xml' does not exist, or is not an SBML string. Provide the path to an existing SBML file or a valid SBML string representation:\n"
      ]
     }
    ],
@@ -343,7 +41,7 @@
     "from cobra.medium import minimal_medium\n",
     "\n",
     "#We load the model that we want to generate a minimal media csv file.\n",
-    "model_csc031 = read_sbml_model(\"concerto/concerto/memotedata/updated_modelcsc031FixedCompartments.xml\")\n",
+    "model_csc031 = read_sbml_model(\"../victor_files_n_codes/Generation_of_rich_media_csv_file/updated_modelcsc031FixedCompartments.xml\")\n",
     "\n",
     "def getMedias(model, element, model_name):\n",
     "    '''\n",
